# notepad-console

./: CMakeLists.txt  README.md
notepad-console/: CMakeLists.txt  notepad-console.cpp  notepad-console.h
notepad-console/file/: file.cpp  file.h
notepad-console/utils/: util.h
